--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3 class="text-center">TREASURE HUNT</h3>
-	<div>
+	<div class="container">
 		<button class= "button1" (click)="startGame()" type="button">StartGame</button>
 		<button class= "button2"(click)="stopGame()"   type="button">ResetGame</button>
 	</div>
@@ -32,17 +32,18 @@
       </div>
 
 				<button [disabled]="(colname.errors?.required && rowname.errors?.required)" 
-        class="custom-button" (click)="initializeMatrix()" type="button">Create</button>
+        class="button1" (click)="initializeMatrix()" type="button">Create</button>
 	</div>
-			<div *ngIf="isStartGame" class="container">
+			<div *ngIf="isResult" class="container">
+        <h3 class="text-center">TREASURE HUNT</h3>
 				<table class="table">
 					<tbody>
 						<tr *ngFor="let row of treasureMatrix; index as i">
-							<td class="cell" (click)="getValue(i,j)" *ngFor="let col of row; index as j">
+							<td class="cell" (click)="isGridisGridEditable && getValue(i,j)" *ngFor="let col of row; index as j">
 								{{treasureMatrix[i][j]}} </td>
 						</tr>
 					</tbody>
 				</table>
-         <button (click)="getDimension()" type="button">Submit</button>
+         <button class ="button1" (click)="getDimension()" type="button">Submit</button>
 			 </div>
 </div>
